--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,17 +1,50 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title><%= yield(:name) %></title>
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-    <%= csrf_meta_tags %>
-  </head>
-  <body>
+<head>
+  <title>Jeanette's Professional Profile</title>
+  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <%= csrf_meta_tags %>
+</head>
+<body>
 
-    <div class='container'>
-      <p id="notice"><%= flash[:notice] %></p>
-      <%= yield %>
-    </div>
+  <nav class="navbar navbar-inverse navbar-fixed-top" id="my-navbar">
+     <div class="container">
+       <div class="navbar-header">
 
-  </body>
+         <button class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse">
+             <span class="icon-bar"></span>
+             <span class="icon-bar"></span>
+             <span class="icon-bar"></span>
+         </button>
+
+         <a href="/" class="navbar-brand">Jeanette Fairless Professional Profile</a>
+       </div>
+        <div class="collapse navbar-collapse" id="navbar-collapse">
+         <ul class="nav navbar-nav">
+           <% if current_user == nil %>
+             <li><%= link_to "Login", new_user_session_path %></li>
+             <li><%= link_to "Sign up", new_user_registration_path %></li>
+           <% else %>
+             <li><%= link_to "Logged in as: #{current_user.email}", '/'  %></li>
+             <li><%= link_to 'Logout', destroy_user_session_path, method: :delete %></li>
+             <li><%= link_to 'Edit Profile', edit_user_registration_path %></li>
+             <!-- <li><%= link_to 'Posts', posts_path %></li>
+             <li><%= link_to 'Add a New Post', new_post_path %></li> -->
+           <% end %>
+         </ul>
+       </div>
+
+     </div>
+   </nav>
+
+  <div id="container">
+      <div class="col-sm-6 col-sm-offset-3">
+        <p class="notice"><%= notice %></p>
+        <p class="alert"><%= alert %></p>
+        <%= yield %>
+      </div>
+
+  </div>
+</body>
 </html>
