--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,6 +29,7 @@
              <li><%= link_to "Logged in as: #{current_user.email}", '/'  %></li>
              <li><%= link_to 'Logout', destroy_user_session_path, method: :delete %></li>
              <li><%= link_to 'Edit Profile', edit_user_registration_path %></li>
+             <li><%= link_to "Jeanette's Blog", posts_path %></li>
              <!-- <li><%= link_to 'Posts', posts_path %></li>
              <li><%= link_to 'Add a New Post', new_post_path %></li> -->
            <% end %>
