--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,6 +1,17 @@
+//Import bootstrap-sprockets
 @import "bootstrap-sprockets";
+
+// Import cosmo variables
+// @import "bootswatch/superhero/variables";
+
+// Then bootstrap itself
 @import "bootstrap";
 
+// Bootstrap body padding for fixed navbar
+// body { padding-top: 60px; }
+
+// And finally bootswatch style itself
+// @import "bootswatch/superhero/bootswatch";
 
 #notice {
   color: red;
