--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,51 +1,45 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Jeanette's Professional Profile</title>
+  <title>Jeanette Fairless Portfolio</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
 
-  <nav class="navbar navbar-inverse navbar-fixed-top" id="my-navbar">
-     <div class="container">
-       <div class="navbar-header">
+  <nav class="navbar navbar-inverse">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-2">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="/">Jeanette Fairless Portfolio</a>
+    </div>
 
-         <button class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse">
-             <span class="icon-bar"></span>
-             <span class="icon-bar"></span>
-             <span class="icon-bar"></span>
-         </button>
-
-         <a href="/" class="navbar-brand">Jeanette Fairless Professional Profile</a>
-       </div>
-        <div class="collapse navbar-collapse" id="navbar-collapse">
-         <ul class="nav navbar-nav">
-           <% if current_user == nil %>
-             <li><%= link_to "Login", new_user_session_path %></li>
-             <li><%= link_to "Sign up", new_user_registration_path %></li>
-           <% else %>
-             <li><%= link_to "Logged in as: #{current_user.email}", '/'  %></li>
-             <li><%= link_to 'Logout', destroy_user_session_path, method: :delete %></li>
-             <li><%= link_to 'Edit Profile', edit_user_registration_path %></li>
-             <li><%= link_to "Jeanette's Blog", posts_path %></li>
-             <!-- <li><%= link_to 'Posts', posts_path %></li>
-             <li><%= link_to 'Add a New Post', new_post_path %></li> -->
-           <% end %>
-         </ul>
-       </div>
-
-     </div>
-   </nav>
-
-  <div id="container">
-      <div class="col-sm-6 col-sm-offset-3">
-        <p class="notice"><%= notice %></p>
-        <p class="alert"><%= alert %></p>
-        <%= yield %>
-      </div>
-
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2">
+      <ul class="nav navbar-nav">
+        <li class="active"><li><%= link_to "Jeanette's Blog", posts_path %></li></li>
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
+        <% if !user_signed_in? %>
+        <li><%= link_to "Sign Up", new_user_registration_path %></a></li>
+        <li><%= link_to "Sign In",  new_user_session_path %></a></li>
+         <% else %>
+        <li class="session-info"><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></li>
+        <% end %>
+      </ul>
+    </div>
   </div>
+</nav>
+<div class="container">
+<p class="notice"><%= notice %></p>
+<p class="alert"><%= alert %></p>
+
+<%= yield %>
+</div>
 </body>
 </html>
