--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2">
       <ul class="nav navbar-nav">
         <li class="active"><li><%= link_to "Jeanette's Blog", posts_path %></li>
-        <!-- <li class="active"><li><%= link_to "References", posts_path %></li> -->
+        <li><%= link_to "References", posts_path %></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <% if !user_signed_in? %>
