--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -7,5 +7,7 @@
   <%= f.text_field :description %>
   <%= f.label :github %>
   <%= f.text_field :github %>
+  <%= f.label :url %>
+  <%= f.text_field :url %>
   <p><%= f.submit %></p>
 <% end %>
